--- a/projet_ds_application.ipynb
+++ b/projet_ds_application.ipynb
@@ -5,7 +5,7 @@
    "id": "66302dce",
    "metadata": {},
    "source": [
-    "# Application d'analyse immobilière\n",
+    "# Notebook 2: Application d'analyse immobilière\n",
     "---\n",
     "## Table des matières\n",
     "\n",
