Modification du notebook code insee

--- a/projet_ds_donnees_code_insee.ipynb
+++ b/projet_ds_donnees_code_insee.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "Fichier : data/20230823-communes-departement-region.csv\n",
     "\n",
-    "Origine : Île-de-France Mobilités — base officielle des points d’arrêt du réseau régional\n",
+    "Origine : Base officielle des communes françaises (INSEE / data.gouv.fr)\n",
     "\n",
     "Source : \n",
     "https://www.data.gouv.fr/datasets/communes-de-france-base-des-codes-postaux/\n",
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "273b8be6",
    "metadata": {},
    "outputs": [
@@ -748,7 +748,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Fichier exporté : data/communes_coordonnees.geojson (1297 lignes)\n"
+      "Fichier exporté : data/communes_coordonnees.geojson (1297 lignes)\n"
      ]
     }
    ],
@@ -774,12 +774,12 @@
     "3. **Après suppression des valeurs manquantes critiques :** \n",
     "   0 lignes supprimées  \n",
     "4. **Après suppression des doublons de code_commune_INSEE :** 86 doublons supprimés  \n",
-    "5. **Colonnes finales (7) :**  \n",
-    "   'INSEE_COM', 'latitude', 'longitude', 'code_departement'\n",
+    "5. **Colonnes finales:**  \n",
+    "   'INSEE_COM', 'latitude', 'longitude', 'code_departement', 'geometry'\n",
     "   avec 1297 lignes\n",
     "6. **Nouvelles variables créées :**  \n",
     "   - `geometry` : point géographique à partir des coordonnées  \n",
-    ". **Format final :** GeoDataFrame (projection WGS84 – EPSG:4326)\n",
+    "7. **Format final :** GeoDataFrame (projection WGS84 – EPSG:4326)\n",
     "\n",
     "\n",
     "\n",
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "26116e03",
    "metadata": {},
    "outputs": [
@@ -797,25 +797,29 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "📋 Vérification finale de la qualité des données :\n",
+      "--- Vérification finale de la qualité des données ---\n",
       "- Valeurs manquantes totales : 0\n",
       "- Nombre total de communes : 1297\n",
       "- Nombre de départements : 8\n",
       "\n",
-      "🧭 Étendue géographique :\n",
+      "Étendue géographique (Île-de-France) :\n",
       "Latitude  : 48.1408 → 49.2132\n",
       "Longitude : 1.4806 → 3.4892\n",
       "\n",
-      "🧩 Types de données :\n",
-      "INSEE_COM     object\n",
-      "longitude    float64\n",
-      "latitude     float64\n",
+      "Colonnes finales :\n",
+      "['INSEE_COM', 'latitude', 'longitude', 'code_departement', 'geometry']\n",
+      "\n",
+      "Types de données :\n",
+      "INSEE_COM            object\n",
+      "longitude           float64\n",
+      "latitude            float64\n",
+      "code_departement     object\n",
       "dtype: object\n"
      ]
     }
    ],
    "source": [
-    "print(\"\\n Vérification finale de la qualité des données :\")\n",
+    "print(\"\\n--- Vérification finale de la qualité des données ---\")\n",
     "\n",
     "missing_total = communes_gdf.isna().sum().sum()\n",
     "print(f\"- Valeurs manquantes totales : {missing_total}\")\n",
@@ -823,12 +827,15 @@
     "print(f\"- Nombre total de communes : {len(communes_gdf)}\")\n",
     "print(f\"- Nombre de départements : {communes_gdf['code_departement'].nunique()}\")\n",
     "\n",
-    "print(\"\\n Étendue géographique :\")\n",
+    "print(\"\\nÉtendue géographique (Île-de-France) :\")\n",
     "print(f\"Latitude  : {communes_gdf['latitude'].min():.4f} → {communes_gdf['latitude'].max():.4f}\")\n",
     "print(f\"Longitude : {communes_gdf['longitude'].min():.4f} → {communes_gdf['longitude'].max():.4f}\")\n",
     "\n",
-    "print(\"\\n Types de données :\")\n",
-    "print(communes_gdf.dtypes[['INSEE_COM', 'longitude', 'latitude']])\n"
+    "print(\"\\nColonnes finales :\")\n",
+    "print(list(communes_gdf.columns))\n",
+    "print(\"\\nTypes de données :\")\n",
+    "print(communes_gdf.dtypes[['INSEE_COM', 'longitude', 'latitude', 'code_departement']])\n",
+    "\n"
    ]
   },
   {
