imports --> into import uploads --> into upload created function for transport map

--- a/projet_ds_application.ipynb
+++ b/projet_ds_application.ipynb
@@ -88,14 +88,17 @@
     "# Importation des bibliothèques nécessaires\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
     "# Pour les visualisations interactives\n",
     "import plotly.express as px\n",
-    "# import plotly.graph_objects as go \n",
+    "import plotly.graph_objects as go \n",
     "import ipywidgets as widgets\n",
-    "# import folium\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import folium\n",
+    "import geopandas as gpd\n",
+    "from folium.plugins import MarkerCluster\n",
     "\n",
     "# CODEZ ICI: Configuration supplémentaire si nécessaire"
    ]
@@ -117,18 +120,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Créez des fonctions pour chaque étape, c'est plus net que du code qui traîne partout !\n",
+    "# --- Chargement des données nettoyées (préparées dans le Notebook 1) ---\n",
+    "# Indicateurs de loyer\n",
+    "df = pd.read_csv('data/cleaned/loyers_IDF_2024.csv')\n",
     "\n",
-    "# Chargement des données nettoyées (préparées dans le Notebook 1)\n",
-    "# df = pd.read_csv('donnees_nettoyees.csv')\n",
-    "df = pd.read_csv('full_2024.csv')\n",
-    "\n",
-    "# Conversion de la date si nécessaire\n",
-    "# df['date_mutation'] = pd.to_datetime(df['date_mutation'])\n",
-    "\n",
-    "# Affichage des premières lignes\n",
-    "# print(f\"Données chargées : {df.shape[0]} lignes, {df.shape[1]} colonnes\")\n",
-    "# df.head()"
+    "# Transports\n",
+    "transports_gdf = gpd.read_file(\"data/transports_nettoyes.geojson\")"
    ]
   },
   {
@@ -398,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e33776f3",
    "metadata": {},
    "outputs": [
@@ -40295,70 +40292,66 @@
     }
    ],
    "source": [
-    "import folium\n",
-    "import geopandas as gpd\n",
-    "from folium.plugins import MarkerCluster\n",
+    "def carte_transport(transports_gdf):\n",
+    "    # --- Création de la carte ---\n",
+    "    m = folium.Map(\n",
+    "        location=[48.8566, 2.3522],  # centre de Paris\n",
+    "        zoom_start=9,\n",
+    "        tiles=\"CartoDB positron\"\n",
+    "    )\n",
     "\n",
-    "# --- Chargement des données ---\n",
-    "transports_gdf = gpd.read_file(\"data/transports_nettoyes.geojson\")\n",
+    "    # --- Couleurs par type de transport (pour organisation) ---\n",
+    "    couleurs = {\n",
+    "        \"METRO\": \"#800080\",   # violet\n",
+    "        \"RER\": \"#E41A1C\",     # rouge\n",
+    "        \"TRAIN\": \"#377EB8\",   # bleu\n",
+    "        \"TRAM\": \"#4DAF4A\",    # vert\n",
+    "    }\n",
     "\n",
-    "# --- Création de la carte ---\n",
-    "m = folium.Map(\n",
-    "    location=[48.8566, 2.3522],  # centre de Paris\n",
-    "    zoom_start=9,\n",
-    "    tiles=\"CartoDB positron\"\n",
-    ")\n",
+    "    # --- Création d'un cluster par type ---\n",
+    "    for t in couleurs.keys():\n",
+    "        subset = transports_gdf[transports_gdf[\"type\"] == t]\n",
+    "        cluster_type = MarkerCluster(name=f\"{t}\").add_to(m)\n",
     "\n",
-    "# --- Couleurs par type de transport (pour organisation) ---\n",
-    "couleurs = {\n",
-    "    \"METRO\": \"#800080\",   # violet\n",
-    "    \"RER\": \"#E41A1C\",     # rouge\n",
-    "    \"TRAIN\": \"#377EB8\",   # bleu\n",
-    "    \"TRAM\": \"#4DAF4A\",    # vert\n",
-    "}\n",
+    "        for _, row in subset.iterrows():\n",
+    "            picto = row[\"picto_url\"]\n",
     "\n",
-    "# --- Création d'un cluster par type ---\n",
-    "for t in couleurs.keys():\n",
-    "    subset = transports_gdf[transports_gdf[\"type\"] == t]\n",
-    "    cluster_type = MarkerCluster(name=f\"{t}\").add_to(m)\n",
+    "            popup_html = f\"\"\"\n",
+    "            <div style='font-size:13px; line-height:1.4'>\n",
+    "                <b>{row['nom']}</b><br>\n",
+    "                🚈 Type : {t}<br>\n",
+    "                🧭 Ligne : {row['ligne']}<br>\n",
+    "                🏢 Exploitant : {row['exploitant']}<br>\n",
+    "                <img src=\"{picto}\" width=\"50\"><br>\n",
+    "                <i>Coordonnées : {round(row['longitude'], 3)}, {round(row['latitude'], 3)}</i>\n",
+    "            </div>\n",
+    "            \"\"\"\n",
     "\n",
-    "    for _, row in subset.iterrows():\n",
-    "        picto = row[\"picto_url\"]\n",
+    "            try:\n",
+    "                icon = folium.CustomIcon(\n",
+    "                    icon_image=picto,\n",
+    "                    icon_size=(30, 30),\n",
+    "                    icon_anchor=(15, 15)\n",
+    "                )\n",
     "\n",
-    "        popup_html = f\"\"\"\n",
-    "        <div style='font-size:13px; line-height:1.4'>\n",
-    "            <b>{row['nom']}</b><br>\n",
-    "            🚈 Type : {t}<br>\n",
-    "            🧭 Ligne : {row['ligne']}<br>\n",
-    "            🏢 Exploitant : {row['exploitant']}<br>\n",
-    "            <img src=\"{picto}\" width=\"50\"><br>\n",
-    "            <i>Coordonnées : {round(row['longitude'], 3)}, {round(row['latitude'], 3)}</i>\n",
-    "        </div>\n",
-    "        \"\"\"\n",
+    "                folium.Marker(\n",
+    "                    location=[row.geometry.y, row.geometry.x],\n",
+    "                    popup=folium.Popup(popup_html, max_width=300),\n",
+    "                    icon=icon\n",
+    "                ).add_to(cluster_type)\n",
     "\n",
-    "        try:\n",
-    "            icon = folium.CustomIcon(\n",
-    "                icon_image=picto,\n",
-    "                icon_size=(30, 30),\n",
-    "                icon_anchor=(15, 15)\n",
-    "            )\n",
+    "            except Exception as e:\n",
+    "                print(f\"⚠️ Erreur sur {row['nom']}: {e}\")\n",
     "\n",
-    "            folium.Marker(\n",
-    "                location=[row.geometry.y, row.geometry.x],\n",
-    "                popup=folium.Popup(popup_html, max_width=300),\n",
-    "                icon=icon\n",
-    "            ).add_to(cluster_type)\n",
+    "    # --- Contrôle des couches ---\n",
+    "    folium.LayerControl(collapsed=False).add_to(m)\n",
     "\n",
-    "        except Exception as e:\n",
-    "            print(f\"⚠️ Erreur sur {row['nom']}: {e}\")\n",
+    "    # --- Sauvegarde ---\n",
+    "    m.save(\"data/carte_transports_avec_icones.html\")\n",
     "\n",
-    "# --- Contrôle des couches ---\n",
-    "folium.LayerControl(collapsed=False).add_to(m)\n",
+    "    return m\n",
     "\n",
-    "# --- Sauvegarde ---\n",
-    "m.save(\"data/carte_transports_avec_icones.html\")\n",
-    "\n",
-    "m\n"
+    "carte_transport(transports_gdf)\n"
    ]
   },
   {
@@ -40515,7 +40508,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -40529,7 +40522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
