--- a/projet_ds_donnees_loyers.ipynb
+++ b/projet_ds_donnees_loyers.ipynb
@@ -43,6 +43,12 @@
     "- Les zones avec un faible coefficient de détermination (R2 < 0,5)\n",
     "- Les zones avec des intervalles de prédiction très larges\n",
     "\n",
+    "**Liste des données**\n",
+    "- [Loyer appartement](https://static.data.gouv.fr/resources/carte-des-loyers-indicateurs-de-loyers-dannonce-par-commune-en-2024/20241205-153050/pred-app-mef-dhup.csv)\n",
+    "- [Loyer appartement T1-T2](https://static.data.gouv.fr/resources/carte-des-loyers-indicateurs-de-loyers-dannonce-par-commune-en-2024/20241205-153048/pred-app12-mef-dhup.csv)\n",
+    "- [Loyer appartement T3+](https://static.data.gouv.fr/resources/carte-des-loyers-indicateurs-de-loyers-dannonce-par-commune-en-2024/20241205-145658/pred-app3-mef-dhup.csv)\n",
+    "- [Loyer maison](https://static.data.gouv.fr/resources/carte-des-loyers-indicateurs-de-loyers-dannonce-par-commune-en-2024/20241205-145700/pred-mai-mef-dhup.csv)\n",
+    "\n",
     "---\n",
     "\n",
     "## **Import des bibliothèques**\n"
@@ -133,6 +139,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e452d69",
+   "metadata": {},
+   "source": [
+    "### **Chargement des fichiers supplémentaires**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c0ea7fa5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "communes_df = pd.read_csv(\"data/cleaned/communes.csv\")\n",
+    "communes_df.drop(columns=\"code_departement\", inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "614c4e73",
    "metadata": {},
    "source": [
@@ -145,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d1235b73",
    "metadata": {},
    "outputs": [
@@ -209,7 +234,7 @@
     "- `EPCI` : Code de groupement intercommunal\n",
     "- `DEP` : Code du département\n",
     "- `REG` : Code de la région\n",
-    "- `loypredm2` --> `loyer_predit_par_m2` : Prix de location prédit par m²\n",
+    "- `loypredm2` --> `loyer_predit_m2` : Prix de location prédit par m²\n",
     "- `lwr.IPm2` --> `borne_inferieure_intervalle` : Borne inférieure de l'intervalle de prédiction\n",
     "- `upr.IPm2` --> `borne_superieure_intervalle` : Borne supérieure de l'intervalle de prédiction\n",
     "- `TYPPRED` --> `type_prediction` : Type de prédiction (\"commune\" ou \"maille\")\n",
@@ -227,14 +252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6b70ea60",
    "metadata": {},
    "outputs": [],
    "source": [
     "column_mapping = {\n",
     "    'LIBGEO': 'nom_commune',\n",
-    "    'loypredm2': 'loyer_predit_par_m2',\n",
+    "    'loypredm2': 'loyer_predit_m2',\n",
     "    'lwr.IPm2': 'borne_inferieure_intervalle',\n",
     "    'upr.IPm2': 'borne_superieure_intervalle',\n",
     "    'TYPPRED': 'type_prediction',\n",
@@ -247,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6c273eb1",
    "metadata": {},
    "outputs": [
@@ -260,7 +285,7 @@
       "====================================================================================================\n",
       "Nombre total de colonnes : 14\n",
       "\n",
-      "Liste des colonnes : id_zone, INSEE_C, nom_commune, EPCI, DEP, REG, loyer_predit_par_m2, borne_inferieure_intervalle, borne_superieure_intervalle, type_prediction, nombre_observations_commune, nombre_observations_zone, coefficient_determination_ajuste, type_bien\n",
+      "Liste des colonnes : id_zone, INSEE_C, nom_commune, EPCI, DEP, REG, loyer_predit_m2, borne_inferieure_intervalle, borne_superieure_intervalle, type_prediction, nombre_observations_commune, nombre_observations_zone, coefficient_determination_ajuste, type_bien\n",
       "\n",
       "\n",
       "--------------\n",
@@ -353,14 +378,14 @@
       "32    15152\n",
       "\n",
       "\n",
-      "--------------------------------------\n",
-      "loyer_predit_par_m2\n",
-      "--------------------------------------\n",
+      "------------------------------\n",
+      "loyer_predit_m2\n",
+      "------------------------------\n",
       "Type: object\n",
       "Valeurs nulles : 0\n",
       "Valeurs uniques : 24021\n",
       "Valeurs principales :\n",
-      "loyer_predit_par_m2\n",
+      "loyer_predit_m2\n",
       "11,3311487804898    95\n",
       "9,54549544490198    95\n",
       "8,05212971461271    91\n",
@@ -503,7 +528,7 @@
    "source": [
     "#### **Analyse des colonnes**\n",
     "D'après l'analyse, nous constatons que les colonnes suivantes nécessiteront un changement de type :\n",
-    "- `loyer_predit_par_m2` --> numérique\n",
+    "- `loyer_predit_m2` --> numérique\n",
     "- `borne_inferieure_intervalle` --> numérique\n",
     "- `borne_superieure_intervalle` --> numérique\n",
     "- `coefficient_determination_ajuste` --> numérique\n",
@@ -518,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8e3b8c4f",
    "metadata": {},
    "outputs": [
@@ -600,7 +625,7 @@
     "- `nom_commune` : Nom de la commune (pour visualisation)\n",
     "- `INSEE_C` : Code INSEE (pour jointures)\n",
     "- `DEP` : Code département\n",
-    "- `loyer_predit_par_m2` : Prix de location prédit par m²\n",
+    "- `loyer_predit_m2` : Prix de location prédit par m²\n",
     "\n",
     "**Colonnes pour l'analyse de qualité**\n",
     "- `nombre_observations_commune` : Nombre d'observations dans la commune\n",
@@ -614,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "22f8ed72",
    "metadata": {},
    "outputs": [
@@ -655,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "90c0f630",
    "metadata": {},
    "outputs": [
@@ -664,15 +689,16 @@
      "output_type": "stream",
      "text": [
       "✓ Converti 4 colonnes en type numérique\n",
+      "✓ Converti 1 colonnes en type catégoriel\n",
       "✓ Converti 1 colonnes en type catégoriel\n"
      ]
     }
    ],
    "source": [
-    "numeric_columns = [\"loyer_predit_par_m2\", \"borne_inferieure_intervalle\", \"borne_superieure_intervalle\", \"coefficient_determination_ajuste\"]\n",
+    "numeric_columns = [\"loyer_predit_m2\", \"borne_inferieure_intervalle\", \"borne_superieure_intervalle\", \"coefficient_determination_ajuste\"]\n",
     "categorial_columns = [\"REG\"]\n",
     "\n",
-    "def convert_to_numeric(df):\n",
+    "def convert_to_numeric(df, numeric_columns=numeric_columns):\n",
     "    \"\"\"Converts specified columns to numeric type\"\"\"\n",
     "    converted = []\n",
     "    for col in numeric_columns:\n",
@@ -692,7 +718,7 @@
     "    print(f\"✓ Converti {len(converted)} colonnes en type numérique\")\n",
     "    return df\n",
     "\n",
-    "def convert_to_categorial(df):\n",
+    "def convert_to_categorial(df, categorial_columns=categorial_columns):\n",
     "    \"\"\"Converts specified columns to categorial type\"\"\"\n",
     "    converted = []\n",
     "    for col in categorial_columns:\n",
@@ -711,7 +737,10 @@
     "    return df\n",
     "\n",
     "merged_df = convert_to_numeric(merged_df)\n",
-    "merged_df = convert_to_categorial(merged_df)"
+    "merged_df = convert_to_categorial(merged_df)\n",
+    "\n",
+    "# Into categorial, so we can merge later on\n",
+    "communes_df = convert_to_categorial(communes_df, [\"code_commune_INSEE\"])"
    ]
   },
   {
@@ -724,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "e5a81812",
    "metadata": {},
    "outputs": [
@@ -793,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "d81749e3",
    "metadata": {},
    "outputs": [
@@ -902,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e38ac260",
    "metadata": {},
    "outputs": [
@@ -985,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "057efa8c",
    "metadata": {},
    "outputs": [
@@ -1025,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "5e8e46b8",
    "metadata": {},
    "outputs": [
@@ -1096,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "66b96561",
    "metadata": {},
    "outputs": [
@@ -1197,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "f6876bc9",
    "metadata": {},
    "outputs": [
@@ -1260,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "022e2f60",
    "metadata": {},
    "outputs": [
@@ -1306,7 +1335,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>loyer_predit_par_m2</th>\n",
+       "      <th>loyer_predit_m2</th>\n",
        "      <td>3548.0</td>\n",
        "      <td>16.810087</td>\n",
        "      <td>4.294699</td>\n",
@@ -1377,7 +1406,7 @@
       ],
       "text/plain": [
        "                                   count         mean          std  \\\n",
-       "loyer_predit_par_m2               3548.0    16.810087     4.294699   \n",
+       "loyer_predit_m2                   3548.0    16.810087     4.294699   \n",
        "borne_inferieure_intervalle       3548.0    13.737271     3.462850   \n",
        "borne_superieure_intervalle       3548.0    20.690876     6.046823   \n",
        "nombre_observations_commune       3548.0   786.650507  2150.009362   \n",
@@ -1385,7 +1414,7 @@
        "coefficient_determination_ajuste  3548.0     0.785770     0.086958   \n",
        "\n",
        "                                         min         25%         50%  \\\n",
-       "loyer_predit_par_m2                 7.533031   14.033683   16.172932   \n",
+       "loyer_predit_m2                     7.533031   14.033683   16.172932   \n",
        "borne_inferieure_intervalle         5.609561   11.308727   13.322453   \n",
        "borne_superieure_intervalle         9.503648   17.000975   19.541782   \n",
        "nombre_observations_commune        10.000000   27.000000   87.000000   \n",
@@ -1393,7 +1422,7 @@
        "coefficient_determination_ajuste    0.502456    0.729719    0.802542   \n",
        "\n",
        "                                          75%           max  \n",
-       "loyer_predit_par_m2                 18.800197     39.415339  \n",
+       "loyer_predit_m2                     18.800197     39.415339  \n",
        "borne_inferieure_intervalle         15.589108     30.084113  \n",
        "borne_superieure_intervalle         22.685796     57.666241  \n",
        "nombre_observations_commune        506.500000  40020.000000  \n",
@@ -1430,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "b9316d8c",
    "metadata": {},
    "outputs": [
@@ -2441,7 +2470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "id": "eec2b12d",
    "metadata": {},
    "outputs": [
@@ -2498,7 +2527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "id": "39fa71ea",
    "metadata": {},
    "outputs": [
@@ -10436,7 +10465,7 @@
     "    df['departement_label'] = df['DEP'] + ' (' + df['nom_departement'] + ')'\n",
     "\n",
     "    fig.add_trace(go.Box(\n",
-    "        y=df[\"loyer_predit_par_m2\"],\n",
+    "        y=df[\"loyer_predit_m2\"],\n",
     "        x=df[\"departement_label\"],\n",
     "        name=\"Loyer par département\",\n",
     "        hovertemplate=\n",
@@ -10491,7 +10520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "416f6bc7",
    "metadata": {},
    "outputs": [
@@ -18427,7 +18456,7 @@
     "    fig = go.Figure()\n",
     "\n",
     "    fig.add_trace(go.Box(\n",
-    "        y=df[\"loyer_predit_par_m2\"],\n",
+    "        y=df[\"loyer_predit_m2\"],\n",
     "        x=df[\"type_bien\"],\n",
     "        name=\"Loyer prédit par m²\",\n",
     "        hovertemplate=\n",
@@ -18488,7 +18517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "id": "d6f307cd",
    "metadata": {},
    "outputs": [],
@@ -18524,7 +18553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "id": "ed544ed0",
    "metadata": {},
    "outputs": [
@@ -19338,12 +19367,12 @@
          }
         },
         "title": {
-         "text": "Distribution de loyer_predit_par_m2"
+         "text": "Distribution de loyer_predit_m2"
         },
         "width": 800,
         "xaxis": {
          "title": {
-          "text": "loyer_predit_par_m2"
+          "text": "loyer_predit_m2"
          }
         },
         "yaxis": {
@@ -19390,7 +19419,7 @@
     "    \n",
     "    fig.show()\n",
     "\n",
-    "distribution_loyers(filtered_df, \"loyer_predit_par_m2\")"
+    "distribution_loyers(filtered_df, \"loyer_predit_m2\")"
    ]
   },
   {
@@ -19423,6 +19452,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f332c179",
+   "metadata": {},
+   "source": [
+    "## **Ajouter des info géographique par commune**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2ff5d33a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_df = communes_df.merge(filtered_df, left_on='code_commune_INSEE', right_on='INSEE_C')\n",
+    "filtered_df.drop(columns=['code_commune_INSEE', 'borne_inferieure_intervalle', 'borne_superieure_intervalle', 'type_prediction', 'coefficient_determination_ajuste'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0e715f69",
    "metadata": {},
    "source": [
@@ -19435,7 +19483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "273b8be6",
    "metadata": {},
    "outputs": [
@@ -19443,7 +19491,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Dataset nettoyé exporté : loyers_IDF_2024.csv - 3548 lignes, 13 colonnes\n"
+      " Dataset nettoyé exporté : loyers_IDF_2024.csv - 3548 lignes, 11 colonnes\n"
      ]
     }
    ],
@@ -19476,7 +19524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "id": "26116e03",
    "metadata": {},
    "outputs": [
@@ -19487,11 +19535,11 @@
       "====================================================================================================\n",
       "RÉSUMÉ DU JEU DE DONNÉES\n",
       "====================================================================================================\n",
-      "Dimensions : 3548 lignes × 13 colonnes\n",
+      "Dimensions : 3548 lignes × 11 colonnes\n",
       "\n",
       "Types de données :\n",
-      "object     7\n",
-      "float64    4\n",
+      "object     6\n",
+      "float64    3\n",
       "int64      2\n",
       "Name: count, dtype: int64\n",
       "\n",
