--- a/projet_ds_donnees_transport.ipynb
+++ b/projet_ds_donnees_transport.ipynb
@@ -1473,7 +1473,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1487,7 +1487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
