--- a/projet_ds_application_final.ipynb
+++ b/projet_ds_application_final.ipynb
@@ -63,15 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "eb2fb51d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import plotly.express as px\n",
-    "from ipywidgets import interact, Dropdown, IntSlider"
+    "from ipywidgets import interact, Dropdown, IntSlider\n",
+    "from ipywidgets import interact, IntSlider\n",
+    "import plotly.express as px\n"
    ]
   },
   {
@@ -86,12 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1bea3fa1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Chargement des données nettoyées (préparées dans le Notebook 1) ---\n"
+    "# --- Chargement des données nettoyées (préparées dans le Notebook 1) ---\n",
+    "df = pd.read_csv(\"dvf_idf_clean.csv\")\n"
    ]
   },
   {
@@ -190,19 +192,187 @@
    "source": [
     "\n",
     "\n",
-    "### Widget 5 : Évaluer la liquidité du marché\n",
+    "### Widget 5 : Évaluer la liquidité du marché — Aperçu global du marché immobilier IDF\n",
     "\n",
-    "<!-- COMPLÉTEZ ICI: Décrivez les éléments du dashboard -->\n",
-    "<!-- Un dashboard qui combine plusieurs métriques importantes pour le persona -->\n"
+    "Ce  widget fournit une vision d’ensemble du marché immobilier francilien à travers plusieurs indicateurs clés : **prix moyen et médian au m²**, **volume total de transactions**, et **surface moyenne des biens vendus**. La médiane \\((P_{50})\\) limite l’effet des valeurs extrêmes, tandis que la moyenne  \n",
+    "\\[\n",
+    "\\text{moyenne} = \\frac{1}{n}\\sum x_i\n",
+    "\\]\n",
+    "décrit le niveau général des prix.\n",
+    "\n",
+    "Afin d’évaluer la dynamique du marché, nous construisons pour chaque commune un **indice de liquidité** combinant :  \n",
+    "1) le **volume annuel de ventes**,  \n",
+    "2) la **continuité des ventes** sur l’année (nombre de mois avec au moins une transaction),  \n",
+    "3) la **stabilité mensuelle** mesurée via le **coefficient de variation (CV)**  \n",
+    "\\[\n",
+    "CV = \\frac{\\sigma}{\\mu}\n",
+    "\\]\n",
+    "\n",
+    "où  \n",
+    "- \\( \\sigma \\) = écart-type mensuel  \n",
+    "- \\( \\mu \\) = moyenne mensuelle  \n",
+    "\n",
+    "L’**indice final de liquidité** est obtenu par combinaison pondérée :  \n",
+    "\\[\n",
+    "\\text{score} = 0.6\\,(\\text{volume}) + 0.2\\,(\\text{mois actifs}) + 0.2\\,(\\text{stabilité})\n",
+    "\\]\n",
+    "\n",
+    "Un score élevé traduit un marché **actif et régulier**, donc facilité pour la revente.  \n",
+    "\n",
+    "​\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e7ae75c7",
+   "execution_count": 3,
+   "id": "bdb36464",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Sécuriser la date\n",
+    "df[\"date_mutation\"] = pd.to_datetime(df[\"date_mutation\"], errors=\"coerce\")\n",
+    "df = df.dropna(subset=[\"date_mutation\"])\n",
+    "\n",
+    "# Colonnes minimales utiles\n",
+    "needed = [\"date_mutation\", \"code_commune\", \"nom_commune\", \"latitude\", \"longitude\"]\n",
+    "assert all(c in df.columns for c in needed), \"Colonnes manquantes pour l'indice.\"\n",
+    "\n",
+    "df[\"mois\"] = df[\"date_mutation\"].dt.to_period(\"M\").astype(str)\n",
+    "\n",
+    "# Ventes par commune × mois\n",
+    "mth = (df.groupby([\"code_commune\",\"nom_commune\",\"mois\"], as_index=False)\n",
+    "               .size()\n",
+    "               .rename(columns={\"size\":\"nb_ventes_mois\"}))\n",
+    "\n",
+    "# On veut 12 mois même si 0 vente \n",
+    "all_months = pd.period_range(\"2024-01\", \"2024-12\", freq=\"M\").astype(str)\n",
+    "pivot = (mth.pivot_table(index=[\"code_commune\",\"nom_commune\"],\n",
+    "                         columns=\"mois\", values=\"nb_ventes_mois\", fill_value=0)\n",
+    "            .reindex(columns=all_months, fill_value=0))\n",
+    "\n",
+    "pivot.head()\n",
+    "\n",
+    "feat = pivot.copy()\n",
+    "feat[\"nb_ventes_2024\"] = feat.sum(axis=1)\n",
+    "feat[\"nb_mois_actifs\"] = (feat[all_months] > 0).sum(axis=1)\n",
+    "\n",
+    "# CV mensuel (std/mean) — si mean=0 → CV=0 pour éviter NaN\n",
+    "mean = feat[all_months].mean(axis=1)\n",
+    "std  = feat[all_months].std(axis=1)\n",
+    "feat[\"cv_mensuel\"] = np.where(mean > 0, (std / (mean + 1e-9)), 0.0)\n",
+    "\n",
+    "# Stabilité = 1 - CV normalisé\n",
+    "# Normalisation min-max sur l'ensemble des communes\n",
+    "cv_min, cv_max = feat[\"cv_mensuel\"].min(), feat[\"cv_mensuel\"].max()\n",
+    "feat[\"cv_norm\"] = (feat[\"cv_mensuel\"] - cv_min) / (cv_max - cv_min + 1e-9)\n",
+    "feat[\"stabilite\"] = 1 - feat[\"cv_norm\"]  # plus stable → score ↑\n",
+    "\n",
+    "# Remettre en DataFrame plat\n",
+    "feat = feat.reset_index()\n",
+    "feat = feat[[\"code_commune\",\"nom_commune\",\"nb_ventes_2024\",\"nb_mois_actifs\",\"stabilite\"]]\n",
+    "\n",
+    "# Rangs percentile (0..1)\n",
+    "feat[\"rk_volume\"] = feat[\"nb_ventes_2024\"].rank(pct=True)\n",
+    "feat[\"rk_mois\"]   = feat[\"nb_mois_actifs\"].rank(pct=True)\n",
+    "feat[\"rk_stab\"]   = feat[\"stabilite\"].rank(pct=True)\n",
+    "\n",
+    "# Pondérations \n",
+    "w_vol, w_mois, w_stab = 0.60, 0.20, 0.20\n",
+    "\n",
+    "feat[\"score_liquidite_2024\"] = (w_vol*feat[\"rk_volume\"] +\n",
+    "                                w_mois*feat[\"rk_mois\"] +\n",
+    "                                w_stab*feat[\"rk_stab\"]) * 100\n",
+    "\n",
+    "# Classe qualitative\n",
+    "feat[\"classe_liquidite\"] = pd.cut(\n",
+    "    feat[\"score_liquidite_2024\"],\n",
+    "    bins=[-1,33,66,101],\n",
+    "    labels=[\"Illiquide\",\"Intermédiaire\",\"Liquide\"],\n",
+    "    right=False\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e7ae75c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7debf74a6ba2406cae8fe74a5ece143b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=60, description='Score min', step=5), IntSlider(value=100, description='…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "centroids = (df.groupby([\"code_commune\",\"nom_commune\"], as_index=False)\n",
+    "                    .agg(latitude=(\"latitude\",\"median\"),\n",
+    "                         longitude=(\"longitude\",\"median\")))\n",
+    "\n",
+    "liq_2024 = feat.merge(centroids, on=[\"code_commune\",\"nom_commune\"], how=\"left\")\n",
+    "liq_2024.shape\n",
+    "\n",
+    "\n",
+    "df_map = liq_2024.copy()\n",
+    "\n",
+    "@interact(\n",
+    "    score_min = IntSlider(min=0, max=100, step=5, value=60, description=\"Score min\"),\n",
+    "    ventes_min = IntSlider(min=0, max=df_map[\"nb_ventes_2024\"].max(), step=10, value=100, description=\"Ventes min\")\n",
+    ")\n",
+    "def plot_liquidite(score_min, ventes_min):\n",
+    "\n",
+    "    tmp = df_map[\n",
+    "        (df_map[\"score_liquidite_2024\"] >= score_min) &\n",
+    "        (df_map[\"nb_ventes_2024\"] >= ventes_min)\n",
+    "    ].copy()\n",
+    "\n",
+    "    # Ajustement taille marqueur\n",
+    "    tmp[\"pt_size\"] = (tmp[\"nb_ventes_2024\"] / tmp[\"nb_ventes_2024\"].max()) * 25 + 5\n",
+    "\n",
+    "    fig = px.scatter_mapbox(\n",
+    "        tmp,\n",
+    "        lat=\"latitude\",\n",
+    "        lon=\"longitude\",\n",
+    "        color=\"score_liquidite_2024\",\n",
+    "        size=\"pt_size\",\n",
+    "        hover_name=\"nom_commune\",\n",
+    "        hover_data=[\"nb_ventes_2024\", \"nb_mois_actifs\", \"stabilite\"],\n",
+    "        zoom=9,\n",
+    "        height=650,\n",
+    "        center={\"lat\": 48.85, \"lon\": 2.35},\n",
+    "        color_continuous_scale=\"Turbo\",   # ✅ meilleure lisibilité\n",
+    "    )\n",
+    "\n",
+    "    fig.update_layout(\n",
+    "        mapbox_style=\"carto-positron\",\n",
+    "        title=\"Indice de liquidité — Carte interactive (2024)\",\n",
+    "        title_x=0.5,\n",
+    "        margin=dict(l=0, r=0, t=60, b=0),\n",
+    "        coloraxis_colorbar=dict(\n",
+    "            title=\"Liquidité\",\n",
+    "            thickness=15,\n",
+    "            len=0.75,\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    fig.update_traces(\n",
+    "        marker=dict(\n",
+    "            opacity=0.85,\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    fig.show()\n"
+   ]
   },
   {
    "cell_type": "markdown",
