--- a/projets_ds_donnees_attraction_ville.ipynb
+++ b/projets_ds_donnees_attraction_ville.ipynb
@@ -18,7 +18,8 @@
     "\n",
     "### Sources de données utilisées\n",
     "\n",
-    "<!-- - https://catalogue-donnees.insee.fr/fr/catalogue/recherche/DS_BPE-->\n",
+    "## https://catalogue-donnees.insee.fr/fr/catalogue/recherche/DS_BPE\n",
+    "## Base Permanente de l'équipement \n",
     "\n",
     "\n",
     "---\n",
