--- a/projets_ds_donnees_delinquence.ipynb
+++ b/projets_ds_donnees_delinquence.ipynb
@@ -16,9 +16,9 @@
     "\n",
     "### Sources de données utilisées\n",
     "\n",
-    "<!-- - https://www.data.gouv.fr/datasets/bases-statistiques-communale-departementale-et-regionale-de-la-delinquance-enregistree-par-la-police-et-la-gendarmerie-nationales-->\n",
+    "### https://www.data.gouv.fr/datasets/bases-statistiques-communale-departementale-et-regionale-de-la-delinquance-enregistree-par-la-police-et-la-gendarmerie-nationales\n",
     "\n",
-    "\n",
+    "## COM - Base Statistique Communale de la délinquence enregistré\n",
     "---\n",
     "\n",
     "## Import des bibliothèques\n"
